stack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample stack template
Mappings: 
  RegionMap: 
    us-east-1: 
      "image": "ami-8c1be5f6"
    us-east-2: 
      "image": "ami-c5062ba0"
    us-west-1: 
      "image": "ami-02eada62"
    us-west-2: 
      "image": "ami-e689729e"
    eu-west-1: 
      "image": "ami-acd005d5"
    eu-west-2:
       "image": "ami-1a7f6d7e"
    ap-southeast-1: 
      "image": "ami-0797ea64"
    ap-southeast-2:
       "image": "ami-8536d6e7"
    ap-northeast-1: 
      "image": "ami-2a69be4c"
    ap-northeast-2:
       "image": "ami-9bec36f5"
    ap-south-1:
      "image": "ami-4fc58420"
    eu-central-1:
       "image": "ami-c7ee5ca8"
    ca-central-1:
       "image": "ami-fd55ec99"    
    sa-east-1:
      "image": "ami-f1344b9d"
    ap-northeast-2:
       "image": "ami-9bec36f5"
    ap-south-1:
      "image": "ami-4fc58420"
    eu-central-1:
       "image": "ami-c7ee5ca8"
    ca-central-1:
       "image": "ami-fd55ec99"    
    sa-east-1:
      "image": "ami-f1344b9d"
Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'
      Tags:
        - Key: Name
          Value: 'MyVPC'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 'MyIGW'
  
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: '10.0.1.0/24'
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 'MyPublic'

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: '10.0.2.0/24'
      Tags:
        - Key: Name
          Value: 'MyPrivate'

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn:  InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: 'Public-Route'

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name 
        Value: "Private-Route"

  DefaultPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", 'image']
      InstanceType: t2.micro
      SecurityGroups:
        - Ref: SecurityGroups
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash 
          yum install httpd -y
          yum update -y
          service httpd start
          echo "<html><h1>Running</h1></html>"> /var/www/html/index.html
  WebServerGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: [!Ref PublicSubnet]
      LaunchConfigurationName:
        Ref: LaunchConfig
      MinSize: "2"
      MaxSize: "5"
      LoadBalancerNames:
        - Ref: ElasticLoadBalancer

  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets: [!Ref PublicSubnet]
      SecurityGroups:
        - Ref: SecurityGroups
      Listeners:
        - LoadBalancerPort: 80
          InstancePort: 80
          Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/index.html
        HealthyThreshold: '2'
        UnhealthyThreshold: '2'
        Interval: '10'
        Timeout: '5'

  SecurityGroups:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http and ssh to client host 
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
